compiler/yacc.output
Terminals unused in grammar

   SELF
   expr_1


State 327 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: components

    2 components: components component
    3           | component
    4           | IMPORT STRING_VAL SEMI_COMA

    5 component: class_interface
    6          | class_implementation
    7          | protocol
    8          | struct
    9          | enum

   10 class_interface: class_interface_header class_interface_body

   11 class_interface_header: AT_INTERFACE IDENTIFIER SEMI_COLUMN IDENTIFIER
   12                       | AT_INTERFACE IDENTIFIER
   13                       | AT_INTERFACE error
   14                       | AT_INTERFACE IDENTIFIER SEMI_COLUMN error

   15 class_interface_body: protocol_reference_list instance_variables interface_declaration_list AT_END
   16                     | protocol_reference_list instance_variables AT_END
   17                     | protocol_reference_list interface_declaration_list AT_END
   18                     | instance_variables interface_declaration_list AT_END
   19                     | protocol_reference_list AT_END
   20                     | instance_variables AT_END
   21                     | interface_declaration_list AT_END
   22                     | AT_END
   23                     | protocol_reference_list error AT_END
   24                     | protocol_reference_list error interface_declaration_list AT_END
   25                     | protocol_reference_list error
   26                     | protocol_reference_list instance_variables interface_declaration_list error
   27                     | protocol_reference_list instance_variables error
   28                     | protocol_reference_list interface_declaration_list error
   29                     | instance_variables interface_declaration_list error
   30                     | instance_variables error
   31                     | interface_declaration_list error

   32 protocol_reference_list: LESS_THAN ids_list_identifier MORE_THAN
   33                        | LESS_THAN ids_list_identifier error

   34 ids_list_identifier: ids_list_identifier COMMA IDENTIFIER
   35                    | IDENTIFIER

   36 array_body: OPEN_S array_ele CLOSE_S
   37           | OPEN_S CLOSE_S

   38 array_ele: expr COMMA array_ele
   39          | expr
   40          | OPEN_S CLOSE_S
   41          | OPEN_S array_ele CLOSE_S COMMA array_ele
   42          | OPEN_S array_ele CLOSE_S
   43          | OPEN_S CLOSE_S COMMA array_ele

   44 instance_variables: OPEN_S instance_variable_declarations CLOSE_S
   45                   | OPEN_S CLOSE_S

   46 instance_variable_declarations: instance_variable_declarations instance_variable_declaration
   47                               | instance_variable_declaration

   48 instance_variable_declaration: visibility_specification variable_declaration_list

   49 variable_declaration_list: variable_declaration_list variable_declarationxx
   50                          | variable_declarationxx

   51 visibility_specification: AT_PRIVATE
   52                         | AT_PROTECTED
   53                         | AT_PUBLIC

   54 struct_variable_declaration: struct_declaration_list

   55 variable_declarationxx: type ids_list SEMI_COMA
   56                       | CONST type ids_list SEMI_COMA
   57                       | PLUS type ids_list SEMI_COMA

   58 ids_list: ids_list COMMA data_member
   59         | data_member
   60         | error

   61 data_member: IDENTIFIER array_tag
   62            | IDENTIFIER
   63            | error array_tag
   64            | IDENTIFIER error

   65 struct_declaration_list: struct_declaration_list variable_declarationxx
   66                        | variable_declarationxx
   67                        | error variable_declarationxx

   68 struct_header: STRUCT IDENTIFIER

   69 struct: struct_header OPEN_S CLOSE_S entity SEMI_COMA
   70       | struct_header OPEN_S struct_variable_declaration CLOSE_S entity SEMI_COMA
   71       | struct_header OPEN_S CLOSE_S SEMI_COMA
   72       | struct_header OPEN_S struct_variable_declaration CLOSE_S SEMI_COMA
   73       | struct_header OPEN_S CLOSE_S entity error SEMI_COMA
   74       | struct_header OPEN_S struct_variable_declaration CLOSE_S entity error SEMI_COMA
   75       | struct_header OPEN_S CLOSE_S error SEMI_COMA
   76       | struct_header OPEN_S struct_variable_declaration CLOSE_S error SEMI_COMA

   77 entity: IDENTIFIER COMMA entity
   78       | IDENTIFIER
   79       | error COMMA

   80 type: simple_type
   81     | complex_type
   82     | struct_type
   83     | enum_type

   84 struct_type: STRUCT IDENTIFIER
   85            | STRUCT IDENTIFIER MULTI

   86 enum_type: ENUM IDENTIFIER
   87          | ENUM IDENTIFIER MULTI

   88 simple_type: INT
   89            | CHAR
   90            | ID
   91            | FLOAT
   92            | NSSTRING
   93            | VOID
   94            | BOOL

   95 complex_type: IDENTIFIER MULTI

   96 array_tag: array_first_tag array_tag_list

   97 array_tag_list: array_tag_list OPEN_ARR INT_VAL CLOSE_ARR
   98               | %empty
   99               | array_tag_list OPEN_ARR error CLOSE_ARR

  100 array_first_tag: OPEN_ARR INT_VAL CLOSE_ARR
  101                | OPEN_ARR CLOSE_ARR

  102 initializer: EQUAL array_body
  103            | %empty

  104 main_initializer: EQUAL expr
  105                 | %empty

  106 interface_declaration_list: interface_declaration_list interface_declaration
  107                           | interface_declaration

  108 interface_declaration: class_method_declaration
  109                      | instance_method_declaration

  110 class_method_declaration: PLUS p_type method_selectors SEMI_COMA
  111                         | PLUS p_type method_selectors error
  112                         | PLUS method_selectors error

  113 instance_method_declaration: MINUS p_type method_selectors SEMI_COMA

  114 p_type: OPEN_P type CLOSE_P

  115 method_selectors: selectors_list
  116                 | IDENTIFIER

  117 selectors_list: selectors_list selector_decleration
  118               | selector_decleration

  119 selector_decleration: IDENTIFIER SEMI_COLUMN parameter_list

  120 parameter_list: parameter_list SEMI_COLUMN parameter
  121               | parameter

  122 parameter: p_type IDENTIFIER

  123 class_implementation: class_implementation_header class_implementation_body

  124 class_implementation_header: AT_IMPLEMENTATION IDENTIFIER SEMI_COLUMN IDENTIFIER
  125                            | AT_IMPLEMENTATION IDENTIFIER

  126 class_implementation_body: instance_variables implementation_definition_list AT_END
  127                          | instance_variables AT_END
  128                          | implementation_definition_list AT_END
  129                          | AT_END

  130 implementation_definition_list: implementation_definition_list implementation_definition
  131                               | implementation_definition

  132 implementation_definition: class_implementation_definition
  133                          | instance_implementation_definition

  134 class_implementation_definition: class_implementation_definition_header block_body

  135 class_implementation_definition_header: PLUS p_type method_selectors

  136 instance_implementation_definition: instance_implementation_definition_header block_body

  137 instance_implementation_definition_header: MINUS p_type method_selectors

  138 block_body: block_body_header block_body_statements

  139 block_body_header: OPEN_S

  140 block_body_statements: statement_list CLOSE_S
  141                      | CLOSE_S
  142                      | error CLOSE_S

  143 statement_list: statement_list statement
  144               | statement

  145 statement: loop_statement
  146          | conditional_statement
  147          | assign_expr SEMI_COMA
  148          | variable_declaration_block
  149          | block_body
  150          | return_statement
  151          | try_catch
  152          | asm
  153          | long_id SEMI_COMA
  154          | throw_statement
  155          | error SEMI_COMA

  156 throw_statement: THROW OPEN_P message_call CLOSE_P SEMI_COMA

  157 asm: AT_ASM STRING_VAL SEMI_COMA

  158 variable_declaration_block: type variable_list SEMI_COMA
  159                           | CONST type variable_list SEMI_COMA
  160                           | enum

  161 variable_list: variable_list COMMA variable
  162              | variable
  163              | variable_list error variable

  164 variable: IDENTIFIER array_tag initializer
  165         | IDENTIFIER main_initializer
  166         | error array_tag initializer

  167 return_statement: RETURN expr SEMI_COMA

  168 loop_statement: for_loop
  169               | while_loop
  170               | do_while

  171 do_while: do_header statement while_loop_header SEMI_COMA

  172 do_header: DO

  173 for_loop: for_loop_header statement

  174 for_loop_header: fOR_OPEN_P for_initializer SEMI_COMA logic_expr1 SEMI_COMA expr CLOSE_P
  175                | fOR_OPEN_P SEMI_COMA logic_expr1 SEMI_COMA expr CLOSE_P
  176                | fOR_OPEN_P for_initializer SEMI_COMA SEMI_COMA expr CLOSE_P
  177                | fOR_OPEN_P for_initializer SEMI_COMA logic_expr1 SEMI_COMA CLOSE_P
  178                | fOR_OPEN_P for_initializer SEMI_COMA SEMI_COMA CLOSE_P
  179                | fOR_OPEN_P SEMI_COMA logic_expr1 SEMI_COMA CLOSE_P
  180                | fOR_OPEN_P SEMI_COMA SEMI_COMA expr CLOSE_P
  181                | fOR_OPEN_P SEMI_COMA SEMI_COMA CLOSE_P

  182 fOR_OPEN_P: FOR OPEN_P

  183 for_initializer: INT IDENTIFIER EQUAL expr
  184                | IDENTIFIER EQUAL expr
  185                | IDENTIFIER

  186 logic_expr1: logic_expr1 AND_AND logic_expr
  187            | logic_expr1 OR_OR logic_expr
  188            | logic_expr

  189 logic_expr: expr LESS_THAN expr
  190           | expr MORE_THAN expr
  191           | expr LESS_OR_EQUAL expr
  192           | expr MORE_OR_EQUAL expr
  193           | expr EQUAL_EQUAL expr
  194           | expr NOT_EQUAL expr
  195           | NOT_EQUAL expr
  196           | OPEN_P logic_expr CLOSE_P
  197           | TRUE
  198           | FALSE
  199           | long_id

  200 expr: assign_expr
  201     | simple_expr

  202 assign_expr: long_id EQUAL simple_expr

  203 long_id: long_id DOT IDENTIFIER
  204        | message_call
  205        | IDENTIFIER
  206        | array_access

  207 array_access: long_id OPEN_ARR simple_expr CLOSE_ARR

  208 simple_expr: STRING_VAL
  209            | INT_VAL
  210            | NULL_TOK
  211            | FLOAT_VAL
  212            | CHAR_VAL
  213            | long_id
  214            | simple_expr PLUS simple_expr
  215            | simple_expr MINUS simple_expr
  216            | simple_expr MULTI simple_expr
  217            | simple_expr DIV simple_expr
  218            | simple_expr DIV_R simple_expr
  219            | OPEN_P simple_expr CLOSE_P
  220            | IDENTIFIER DOUBLEPLUS
  221            | IDENTIFIER DOUBLEMINUS
  222            | DOUBLEPLUS IDENTIFIER
  223            | DOUBLEMINUS IDENTIFIER
  224            | p_type simple_expr

  225 message_call2: OPEN_ARR

  226 message_call: message_call2 sender message CLOSE_ARR

  227 sender: message_call
  228       | IDENTIFIER

  229 message: IDENTIFIER
  230        | message_selectors_list

  231 message_selectors_list: message_selectors_list message_selector
  232                       | message_selector

  233 message_selector: IDENTIFIER SEMI_COLUMN argument_list

  234 argument_list: argument_list SEMI_COLUMN argument
  235              | argument

  236 argument: expr

  237 while_loop: while_loop_header statement

  238 while_loop_header: WHILE OPEN_P logic_expr1 CLOSE_P

  239 conditional_statement: if_header statement
  240                      | if_header statement ELSE statement
  241                      | switch_header switch_body

  242 if_header: IF OPEN_P logic_expr1 CLOSE_P

  243 switch_header: SWITCH OPEN_P IDENTIFIER CLOSE_P switch_body_block

  244 switch_body_block: OPEN_S

  245 switch_body: list_of_case default_case CLOSE_S
  246            | list_of_case CLOSE_S
  247            | default_case CLOSE_S
  248            | CLOSE_S

  249 list_of_case: list_of_case case_body
  250             | case_body

  251 case_body: CASE expr SEMI_COLUMN statement BREAK SEMI_COMA
  252          | CASE expr SEMI_COLUMN statement
  253          | CASE expr SEMI_COLUMN BREAK SEMI_COMA

  254 default_case: DEFAULT SEMI_COLUMN statement BREAK SEMI_COMA
  255             | DEFAULT SEMI_COLUMN statement
  256             | DEFAULT SEMI_COLUMN BREAK SEMI_COMA

  257 protocol: protocol_header protocol_body

  258 protocol_header: AT_PROTOCOL IDENTIFIER

  259 protocol_body: protocol_reference_list interface_declaration_list AT_END
  260              | interface_declaration_list AT_END
  261              | protocol_reference_list AT_END
  262              | AT_END

  263 enum: ENUM IDENTIFIER OPEN_S list_expr CLOSE_S SEMI_COMA
  264     | ENUM IDENTIFIER SEMI_COMA

  265 list_expr: IDENTIFIER EQUAL expr COMMA list_expr
  266          | IDENTIFIER EQUAL expr
  267          | IDENTIFIER
  268          | IDENTIFIER COMMA list_expr

  269 try_catch: TRY statement catch_list finally_statement
  270          | TRY statement catch_list

  271 catch_list: one_catch
  272           | catch_list one_catch

  273 one_catch: one_catch_header statement

  274 one_catch_header: CATCH OPEN_P type IDENTIFIER CLOSE_P

  275 finally_statement: FINALLY statement


Terminals, with rules where they appear

$end (0) 0
error (256) 13 14 23 24 25 26 27 28 29 30 31 33 60 63 64 67 73 74 75
    76 79 99 111 112 142 155 163 166
AT_INTERFACE (258) 11 12 13 14
IDENTIFIER (259) 11 12 14 34 35 61 62 64 68 77 78 84 85 86 87 95 116
    119 122 124 125 164 165 183 184 185 203 205 220 221 222 223 228
    229 233 243 258 263 264 265 266 267 268 274
SEMI_COLUMN (260) 11 14 119 120 124 233 234 251 252 253 254 255 256
NSSTRING (261) 92
FLOAT (262) 91
CHAR (263) 89
BOOL (264) 94
INT (265) 88 183
SEMI_COMA (266) 4 55 56 57 69 70 71 72 73 74 75 76 110 113 147 153
    155 156 157 158 159 167 171 174 175 176 177 178 179 180 181 251
    253 254 256 263 264
ID (267) 90
AT_PUBLIC (268) 53
AT_PROTECTED (269) 52
AT_PRIVATE (270) 51
OPEN_S (271) 36 37 40 41 42 43 44 45 69 70 71 72 73 74 75 76 139 244
    263
CLOSE_S (272) 36 37 40 41 42 43 44 45 69 70 71 72 73 74 75 76 140 141
    142 245 246 247 248 263
COMMA (273) 34 38 41 43 58 77 79 161 265 268
LESS_THAN (274) 32 33 189
MORE_THAN (275) 32 190
AT_END (276) 15 16 17 18 19 20 21 22 23 24 126 127 128 129 259 260
    261 262
CONST (277) 56 159
VOID (278) 93
PLUS (279) 57 110 111 112 135 214
MINUS (280) 113 137 215
OPEN_P (281) 114 156 182 196 219 238 242 243 274
CLOSE_P (282) 114 156 174 175 176 177 178 179 180 181 196 219 238 242
    243 274
AT_IMPLEMENTATION (283) 124 125
AND_AND (284) 186
OR_OR (285) 187
STRING_VAL (286) 4 157 208
FLOAT_VAL (287) 211
LESS_OR_EQUAL (288) 191
CHAR_VAL (289) 212
INT_VAL (290) 97 100 209
MORE_OR_EQUAL (291) 192
MULTI (292) 85 87 95 216
EQUAL_EQUAL (293) 193
NOT_EQUAL (294) 194 195
FOR (295) 182
EQUAL (296) 102 104 183 184 202 265 266
DIV (297) 217
DIV_R (298) 218
WHILE (299) 238
IF (300) 242
DO (301) 172
SWITCH (302) 243
CASE (303) 251 252 253
DEFAULT (304) 254 255 256
BREAK (305) 251 253 254 256
ENUM (306) 86 87 263 264
OPEN_ARR (307) 97 99 100 101 207 225
CLOSE_ARR (308) 97 99 100 101 207 226
TRUE (309) 197
FALSE (310) 198
RETURN (311) 167
AT_PROTOCOL (312) 258
ELSE (313) 240
STRUCT (314) 68 84 85
DOT (315) 203
DOUBLEPLUS (316) 220 222
DOUBLEMINUS (317) 221 223
TRY (318) 269 270
CATCH (319) 274
THROW (320) 156
FINALLY (321) 275
AT_ASM (322) 157
SELF (323)
IMPORT (324) 4
NULL_TOK (325) 210
if_h (326)
expr_1 (327)
p_type_expr_prec (328)
long_id_prec (329)
try_prec (330)


Nonterminals, with rules where they appear

$accept (76)
    on left: 0
program (77)
    on left: 1, on right: 0
components (78)
    on left: 2 3 4, on right: 1 2
component (79)
    on left: 5 6 7 8 9, on right: 2 3
class_interface (80)
    on left: 10, on right: 5
class_interface_header (81)
    on left: 11 12 13 14, on right: 10
class_interface_body (82)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31, on right:
    10
protocol_reference_list (83)
    on left: 32 33, on right: 15 16 17 19 23 24 25 26 27 28 259 261
ids_list_identifier (84)
    on left: 34 35, on right: 32 33 34
array_body (85)
    on left: 36 37, on right: 102
array_ele (86)
    on left: 38 39 40 41 42 43, on right: 36 38 41 42 43
instance_variables (87)
    on left: 44 45, on right: 15 16 18 20 26 27 29 30 126 127
instance_variable_declarations (88)
    on left: 46 47, on right: 44 46
instance_variable_declaration (89)
    on left: 48, on right: 46 47
variable_declaration_list (90)
    on left: 49 50, on right: 48 49
visibility_specification (91)
    on left: 51 52 53, on right: 48
struct_variable_declaration (92)
    on left: 54, on right: 70 72 74 76
variable_declarationxx (93)
    on left: 55 56 57, on right: 49 50 65 66 67
ids_list (94)
    on left: 58 59 60, on right: 55 56 57 58
data_member (95)
    on left: 61 62 63 64, on right: 58 59
struct_declaration_list (96)
    on left: 65 66 67, on right: 54 65
struct_header (97)
    on left: 68, on right: 69 70 71 72 73 74 75 76
struct (98)
    on left: 69 70 71 72 73 74 75 76, on right: 8
entity (99)
    on left: 77 78 79, on right: 69 70 73 74 77
type (100)
    on left: 80 81 82 83, on right: 55 56 57 114 158 159 274
struct_type (101)
    on left: 84 85, on right: 82
enum_type (102)
    on left: 86 87, on right: 83
simple_type (103)
    on left: 88 89 90 91 92 93 94, on right: 80
complex_type (104)
    on left: 95, on right: 81
array_tag (105)
    on left: 96, on right: 61 63 164 166
array_tag_list (106)
    on left: 97 98 99, on right: 96 97 99
array_first_tag (107)
    on left: 100 101, on right: 96
initializer (108)
    on left: 102 103, on right: 164 166
main_initializer (109)
    on left: 104 105, on right: 165
interface_declaration_list (110)
    on left: 106 107, on right: 15 17 18 21 24 26 28 29 31 106 259
    260
interface_declaration (111)
    on left: 108 109, on right: 106 107
class_method_declaration (112)
    on left: 110 111 112, on right: 108
instance_method_declaration (113)
    on left: 113, on right: 109
p_type (114)
    on left: 114, on right: 110 111 113 122 135 137 224
method_selectors (115)
    on left: 115 116, on right: 110 111 112 113 135 137
selectors_list (116)
    on left: 117 118, on right: 115 117
selector_decleration (117)
    on left: 119, on right: 117 118
parameter_list (118)
    on left: 120 121, on right: 119 120
parameter (119)
    on left: 122, on right: 120 121
class_implementation (120)
    on left: 123, on right: 6
class_implementation_header (121)
    on left: 124 125, on right: 123
class_implementation_body (122)
    on left: 126 127 128 129, on right: 123
implementation_definition_list (123)
    on left: 130 131, on right: 126 128 130
implementation_definition (124)
    on left: 132 133, on right: 130 131
class_implementation_definition (125)
    on left: 134, on right: 132
class_implementation_definition_header (126)
    on left: 135, on right: 134
instance_implementation_definition (127)
    on left: 136, on right: 133
instance_implementation_definition_header (128)
    on left: 137, on right: 136
block_body (129)
    on left: 138, on right: 134 136 149
block_body_header (130)
    on left: 139, on right: 138
block_body_statements (131)
    on left: 140 141 142, on right: 138
statement_list (132)
    on left: 143 144, on right: 140 143
statement (133)
    on left: 145 146 147 148 149 150 151 152 153 154 155, on right:
    143 144 171 173 237 239 240 251 252 254 255 269 270 273 275
throw_statement (134)
    on left: 156, on right: 154
asm (135)
    on left: 157, on right: 152
variable_declaration_block (136)
    on left: 158 159 160, on right: 148
variable_list (137)
    on left: 161 162 163, on right: 158 159 161 163
variable (138)
    on left: 164 165 166, on right: 161 162 163
return_statement (139)
    on left: 167, on right: 150
loop_statement (140)
    on left: 168 169 170, on right: 145
do_while (141)
    on left: 171, on right: 170
do_header (142)
    on left: 172, on right: 171
for_loop (143)
    on left: 173, on right: 168
for_loop_header (144)
    on left: 174 175 176 177 178 179 180 181, on right: 173
fOR_OPEN_P (145)
    on left: 182, on right: 174 175 176 177 178 179 180 181
for_initializer (146)
    on left: 183 184 185, on right: 174 176 177 178
logic_expr1 (147)
    on left: 186 187 188, on right: 174 175 177 179 186 187 238 242
logic_expr (148)
    on left: 189 190 191 192 193 194 195 196 197 198 199, on right:
    186 187 188 196
expr (149)
    on left: 200 201, on right: 38 39 104 167 174 175 176 180 183 184
    189 190 191 192 193 194 195 236 251 252 253 265 266
assign_expr (150)
    on left: 202, on right: 147 200
long_id (151)
    on left: 203 204 205 206, on right: 153 199 202 203 207 213
array_access (152)
    on left: 207, on right: 206
simple_expr (153)
    on left: 208 209 210 211 212 213 214 215 216 217 218 219 220 221
    222 223 224, on right: 201 202 207 214 215 216 217 218 219 224
message_call2 (154)
    on left: 225, on right: 226
message_call (155)
    on left: 226, on right: 156 204 227
sender (156)
    on left: 227 228, on right: 226
message (157)
    on left: 229 230, on right: 226
message_selectors_list (158)
    on left: 231 232, on right: 230 231
message_selector (159)
    on left: 233, on right: 231 232
argument_list (160)
    on left: 234 235, on right: 233 234
argument (161)
    on left: 236, on right: 234 235
while_loop (162)
    on left: 237, on right: 169
while_loop_header (163)
    on left: 238, on right: 171 237
conditional_statement (164)
    on left: 239 240 241, on right: 146
if_header (165)
    on left: 242, on right: 239 240
switch_header (166)
    on left: 243, on right: 241
switch_body_block (167)
    on left: 244, on right: 243
switch_body (168)
    on left: 245 246 247 248, on right: 241
list_of_case (169)
    on left: 249 250, on right: 245 246 249
case_body (170)
    on left: 251 252 253, on right: 249 250
default_case (171)
    on left: 254 255 256, on right: 245 247
protocol (172)
    on left: 257, on right: 7
protocol_header (173)
    on left: 258, on right: 257
protocol_body (174)
    on left: 259 260 261 262, on right: 257
enum (175)
    on left: 263 264, on right: 9 160
list_expr (176)
    on left: 265 266 267 268, on right: 263 265 268
try_catch (177)
    on left: 269 270, on right: 151
catch_list (178)
    on left: 271 272, on right: 269 270 272
one_catch (179)
    on left: 273, on right: 271 272
one_catch_header (180)
    on left: 274, on right: 273
finally_statement (181)
    on left: 275, on right: 269


State 0

    0 $accept: . program $end
    1 program: . components
    2 components: . components component
    3           | . component
    4           | . IMPORT STRING_VAL SEMI_COMA
    5 component: . class_interface
    6          | . class_implementation
    7          | . protocol
    8          | . struct
    9          | . enum
   10 class_interface: . class_interface_header class_interface_body
   11 class_interface_header: . AT_INTERFACE IDENTIFIER SEMI_COLUMN IDENTIFIER
   12                       | . AT_INTERFACE IDENTIFIER
   13                       | . AT_INTERFACE error
   14                       | . AT_INTERFACE IDENTIFIER SEMI_COLUMN error
   68 struct_header: . STRUCT IDENTIFIER
   69 struct: . struct_header OPEN_S CLOSE_S entity SEMI_COMA
   70       | . struct_header OPEN_S struct_variable_declaration CLOSE_S entity SEMI_COMA
   71       | . struct_header OPEN_S CLOSE_S SEMI_COMA
   72       | . struct_header OPEN_S struct_variable_declaration CLOSE_S SEMI_COMA
   73       | . struct_header OPEN_S CLOSE_S entity error SEMI_COMA
   74       | . struct_header OPEN_S struct_variable_declaration CLOSE_S entity error SEMI_COMA
   75       | . struct_header OPEN_S CLOSE_S error SEMI_COMA
   76       | . struct_header OPEN_S struct_variable_declaration CLOSE_S error SEMI_COMA
  123 class_implementation: . class_implementation_header class_implementation_body
  124 class_implementation_header: . AT_IMPLEMENTATION IDENTIFIER SEMI_COLUMN IDENTIFIER
  125                            | . AT_IMPLEMENTATION IDENTIFIER
  257 protocol: . protocol_header protocol_body
  258 protocol_header: . AT_PROTOCOL IDENTIFIER
  263 enum: . ENUM IDENTIFIER OPEN_S list_expr CLOSE_S SEMI_COMA
  264     | . ENUM IDENTIFIER SEMI_COMA

    AT_INTERFACE       shift, and go to state 1
    AT_IMPLEMENTATION  shift, and go to state 2
    ENUM               shift, and go to state 3
    AT_PROTOCOL        shift, and go to state 4
    STRUCT             shift, and go to state 5
    IMPORT             shift, and go to state 6

    program                      go to state 7
    components                   go to state 8
    component                    go to state 9
    class_interface              go to state 10
    class_interface_header       go to state 11
    struct_header                go to state 12
    struct                       go to state 13
    class_implementation         go to state 14
    class_implementation_header  go to state 15
    protocol                     go to state 16
    protocol_header              go to state 17
    enum                         go to state 18


State 1

   11 class_interface_header: AT_INTERFACE . IDENTIFIER SEMI_COLUMN IDENTIFIER
   12                       | AT_INTERFACE . IDENTIFIER
   13                       | AT_INTERFACE . error
   14                       | AT_INTERFACE . IDENTIFIER SEMI_COLUMN error

    error       shift, and go to state 19
    IDENTIFIER  shift, and go to state 20


State 2

  124 class_implementation_header: AT_IMPLEMENTATION . IDENTIFIER SEMI_COLUMN IDENTIFIER
  125                            | AT_IMPLEMENTATION . IDENTIFIER

    IDENTIFIER  shift, and go to state 21


State 3

  263 enum: ENUM . IDENTIFIER OPEN_S list_expr CLOSE_S SEMI_COMA
  264     | ENUM . IDENTIFIER SEMI_COMA

    IDENTIFIER  shift, and go to state 22


State 4

  258 protocol_header: AT_PROTOCOL . IDENTIFIER

    IDENTIFIER  shift, and go to state 23


State 5

   68 struct_header: STRUCT . IDENTIFIER

    IDENTIFIER  shift, and go to state 24


State 6

    4 components: IMPORT . STRING_VAL SEMI_COMA

    STRING_VAL  shift, and go to state 25


State 7

    0 $accept: program . $end

    $end  shift, and go to state 26


State 8

    1 program: components .  [$end]
    2 components: components . component
    5 component: . class_interface
    6          | . class_implementation
    7          | . protocol
    8          | . struct
    9          | . enum
   10 class_interface: . class_interface_header class_interface_body
   11 class_interface_header: . AT_INTERFACE IDENTIFIER SEMI_COLUMN IDENTIFIER
   12                       | . AT_INTERFACE IDENTIFIER
   13                       | . AT_INTERFACE error
   14                       | . AT_INTERFACE IDENTIFIER SEMI_COLUMN error
   68 struct_header: . STRUCT IDENTIFIER
   69 struct: . struct_header OPEN_S CLOSE_S entity SEMI_COMA
   70       | . struct_header OPEN_S struct_variable_declaration CLOSE_S entity SEMI_COMA
   71       | . struct_header OPEN_S CLOSE_S SEMI_COMA
   72       | . struct_header OPEN_S struct_variable_declaration CLOSE_S SEMI_COMA
   73       | . struct_header OPEN_S CLOSE_S entity error SEMI_COMA
   74       | . struct_header OPEN_S struct_variable_declaration CLOSE_S entity error SEMI_COMA
   75       | . struct_header OPEN_S CLOSE_S error SEMI_COMA
   76       | . struct_header OPEN_S struct_variable_declaration CLOSE_S error SEMI_COMA
  123 class_implementation: . class_implementation_header class_implementation_body
  124 class_implementation_header: . AT_IMPLEMENTATION IDENTIFIER SEMI_COLUMN IDENTIFIER
  125                            | . AT_IMPLEMENTATION IDENTIFIER
  257 protocol: . protocol_header protocol_body
  258 protocol_header: . AT_PROTOCOL IDENTIFIER
  263 enum: . ENUM IDENTIFIER OPEN_S list_expr CLOSE_S SEMI_COMA
  264     | . ENUM IDENTIFIER SEMI_COMA

    AT_INTERFACE       shift, and go to state 1
    AT_IMPLEMENTATION  shift, and go to state 2
    ENUM               shift, and go to state 3
    AT_PROTOCOL        shift, and go to state 4
    STRUCT             shift, and go to state 5

    $default  reduce using rule 1 (program)

    component                    go to state 27
    class_interface              go to state 10
    class_interface_header       go to state 11
    struct_header                go to state 12
    struct                       go to state 13
    class_implementation         go to state 14
    class_implementation_header  go to state 15
    protocol                     go to state 16
    protocol_header              go to state 17
    enum                         go to state 18


State 9

    3 components: component .

    $default  reduce using rule 3 (components)


State 10

    5 component: class_interface .

    $default  reduce using rule 5 (component)


State 11

   10 class_interface: class_interface_header . class_interface_body
   15 class_interface_body: . protocol_reference_list instance_variables interface_declaration_list AT_END
   16                     | . protocol_reference_list instance_variables AT_END
   17                     | . protocol_reference_list interface_declaration_list AT_END
   18                     | . instance_variables interface_declaration_list AT_END
   19                     | . protocol_reference_list AT_END
   20                     | . instance_variables AT_END
   21                     | . interface_declaration_list AT_END
   22                     | . AT_END
   23                     | . protocol_reference_list error AT_END
   24                     | . protocol_reference_list error interface_declaration_list AT_END
   25                     | . protocol_reference_list error
   26                     | . protocol_reference_list instance_variables interface_declaration_list error
   27                     | . protocol_reference_list instance_variables error
   28                     | . protocol_reference_list interface_declaration_list error
   29                     | . instance_variables interface_declaration_list error
   30                     | . instance_variables error
   31                     | . interface_declaration_list error
   32 protocol_reference_list: . LESS_THAN ids_list_identifier MORE_THAN
   33                        | . LESS_THAN ids_list_identifier error
   44 instance_variables: . OPEN_S instance_variable_declarations CLOSE_S
   45                   | . OPEN_S CLOSE_S
  106 interface_declaration_list: . interface_declaration_list interface_declaration
  107                           | . interface_declaration
  108 interface_declaration: . class_method_declaration
  109                      | . instance_method_declaration
  110 class_method_declaration: . PLUS p_type method_selectors SEMI_COMA
  111                         | . PLUS p_type method_selectors error
  112                         | . PLUS method_selectors error
  113 instance_method_declaration: . MINUS p_type method_selectors SEMI_COMA

    OPEN_S     shift, and go to state 28
    LESS_THAN  shift, and go to state 29
    AT_END     shift, and go to state 30
    PLUS       shift, and go to state 31
    MINUS      shift, and go to state 32

    class_interface_body         go to state 33
    protocol_reference_list      go to state 34
    instance_variables           go to state 35
    interface_declaration_list   go to state 36
    interface_declaration        go to state 37
    class_method_declaration     go to state 38
    instance_method_declaration  go to state 39


State 12

   69 struct: struct_header . OPEN_S CLOSE_S entity SEMI_COMA
   70       | struct_header . OPEN_S struct_variable_declaration CLOSE_S entity SEMI_COMA
   71       | struct_header . OPEN_S CLOSE_S SEMI_COMA
   72       | struct_header . OPEN_S struct_variable_declaration CLOSE_S SEMI_COMA
   73       | struct_header . OPEN_S CLOSE_S entity error SEMI_COMA
   74       | struct_header . OPEN_S struct_variable_declaration CLOSE_S entity error SEMI_COMA
   75       | struct_header . OPEN_S CLOSE_S error SEMI_COMA
   76       | struct_header . OPEN_S struct_variable_declaration CLOSE_S error SEMI_COMA

    OPEN_S  shift, and go to state 40


State 13

    8 component: struct .

    $default  reduce using rule 8 (component)


State 14

    6 component: class_implementation .

    $default  reduce using rule 6 (component)


State 15

   44 instance_variables: . OPEN_S instance_variable_declarations CLOSE_S
   45                   | . OPEN_S CLOSE_S
  123 class_implementation: class_implementation_header . class_implementation_body
  126 class_implementation_body: . instance_variables implementation_definition_list AT_END
  127                          | . instance_variables AT_END
  128                          | . implementation_definition_list AT_END
  129                          | . AT_END
  130 implementation_definition_list: . implementation_definition_list implementation_definition
  131                               | . implementation_definition
  132 implementation_definition: . class_implementation_definition
  133                          | . instance_implementation_definition
  134 class_implementation_definition: . class_implementation_definition_header block_body
  135 class_implementation_definition_header: . PLUS p_type method_selectors
  136 instance_implementation_definition: . instance_implementation_definition_header block_body
  137 instance_implementation_definition_header: . MINUS p_type method_selectors

    OPEN_S  shift, and go to state 28
    AT_END  shift, and go to state 41
    PLUS    shift, and go to state 42
    MINUS   shift, and go to state 43

    instance_variables                         go to state 44
    class_implementation_body                  go to state 45
    implementation_definition_list             go to state 46
    implementation_definition                  go to state 47
    class_implementation_definition            go to state 48
    class_implementation_definition_header     go to state 49
    instance_implementation_definition         go to state 50
    instance_implementation_definition_header  go to state 51


State 16

    7 component: protocol .

    $default  reduce using rule 7 (component)


State 17

   32 protocol_reference_list: . LESS_THAN ids_list_identifier MORE_THAN
   33                        | . LESS_THAN ids_list_identifier error
  106 interface_declaration_list: . interface_declaration_list interface_declaration
  107                           | . interface_declaration
  108 interface_declaration: . class_method_declaration
  109                      | . instance_method_declaration
  110 class_method_declaration: . PLUS p_type method_selectors SEMI_COMA
  111                         | . PLUS p_type method_selectors error
  112                         | . PLUS method_selectors error
  113 instance_method_declaration: . MINUS p_type method_selectors SEMI_COMA
  257 protocol: protocol_header . protocol_body
  259 protocol_body: . protocol_reference_list interface_declaration_list AT_END
  260              | . interface_declaration_list AT_END
  261              | . protocol_reference_list AT_END
  262              | . AT_END

    LESS_THAN  shift, and go to state 29
    AT_END     shift, and go to state 52
    PLUS       shift, and go to state 31
    MINUS      shift, and go to state 32
